# auto_logist

./: .gitignore  pyproject.toml
auto_logist/: __main__.py
auto_logist/config/: __init__.py  __main__.py  default.py
auto_logist/db/: __main__.py
auto_logist/driver/: __init__.py  get_driver.py  redirect.py  tabs.py
auto_logist/models/: __init__.py  offers.py
auto_logist/parser/: __init__.py  offers_table.py
auto_logist/utils/: __init__.py  get_digits.py  get_settings.py
auto_logist/utils/driver/: get_authorized.py
auto_logist/utils/maps/: yandex.py
html-pages/: Logist Pro -.html  Logist Pro alert.html
html-pages/Logist Pro -_files/: 1.e04bf77e1ccfd2d52fdb.js.загрузка  carrier.js.загрузка  common.js.загрузка  style.css  vendor.js.загрузка
html-pages/Logist Pro alert_files/: 0.e04bf77e1ccfd2d52fdb.js.загрузка  js  js(1)  manifest.js.загрузка  util.js.загрузка
